--- a/thesis/machine_learning.tex
+++ b/thesis/machine_learning.tex
@@ -50,7 +50,7 @@ All PF candidates associated with a jet – both charged and neutral – are use
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{media/deepJet_architecture.png}
-    \caption{Illustration of the DeepJet architecture, adapted from \cite{Bols_2020} to fit our dataset (see \ref{sec:dataset}). Charged and neutral particle-flow
+    \caption{Illustration of the DeepJet architecture, adapted from \cite{Bols_2020} to fit the dataset (see \ref{sec:dataset}). Charged and neutral particle-flow
 candidates, secondary vertices, and global variables are used as inputs to the tagger, which are processed by the hidden layers (white). The model outputs the probabilities for a jet to belong to one of the six jet classes.}
     \label{fig:deepjetArchitecture}
 \end{figure}
