--- a/thesis/standard_model.tex
+++ b/thesis/standard_model.tex
@@ -30,7 +30,7 @@ To explore phenomena at distance scales far below $10^{-18}$ m (i.e. at extreme
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.9\linewidth]{media/CCC-v2018-print-v2.pdf}
-    \caption{ Sketch of the CERN accelerator complex, adapted from \cite{Mobs:2636343}.}
+    \caption{ Sketch of the CERN accelerator complex \cite{Mobs:2636343}.}
     \label{fig:lhc}
 \end{figure}
 
